# CMakeNICSLU

./: CMakeLists.txt
cmake/: setup_nicslu.cmake
include/: nics_config.h  nicslu_defines.h
include/nicslu/: nicslu.h
src/: nicslu_aegraph.c  nicslu_amd.c  nicslu_analyze.c  nicslu_check.c  nicslu_cond.c  nicslu_destroy.c  nicslu_dumpa.c  nicslu_dumplu.c  nicslu_etree.c  nicslu_flops.c  nicslu_initialize.c  nicslu_internal.c  nicslu_kernel.c  nicslu_kernel_fact.c  nicslu_kernel_fact_parallel.c  nicslu_kernel_parallel.c  nicslu_matrix.c  nicslu_mc64.c  nicslu_mc64scale.c  nicslu_memuse.c  nicslu_mergedup.c  nicslu_readfile.c  nicslu_refact.c  nicslu_refact_parallel.c  nicslu_refine.c  nicslu_residual.c  nicslu_scale.c  nicslu_scheduler.c  nicslu_solve.c  nicslu_sort.c  nicslu_static_symbolic.c  nicslu_thread.c  nicslu_thread_proc.c  nicslu_throughput.c  nicslu_transpose.c  system.c  thread.c  timer_c.c
